tests/ui/parser/use-ends-with-mod-sep.rs
use std::any::; //~ ERROR expected identifier, found `;`
